# howto-protobuf

./: Makefile  README.md
go/: Makefile  main.go
java/: Makefile  pom.xml
java/src/main/java/org/lanseg/demo/: Main.java
plugin/: Makefile  plugin.py  pyproject.toml
presentation/: Makefile  main.tex  protobuf-overview.kilepr  talk.txt
presentation/.kile/: protobuf-overview.kilepr.gui
proto/: Makefile  schema.proto
python/: Makefile  main.py  pyproject.toml
