[tool.poetry]
name = "python-proto-demo"
version = "0.1.0"
description = ""
authors = ["Lanseg <lanseg@proton.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^6.30.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
